# sonpipe

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  update.sh
.github/workflows/: cli-tests.yml  integration-tests.yml  matlab-tests.yml
matlab/+sonpipe/: Contents.m  channelinfo.m  channels.m  executable.m  read_SOMSMR_datafile.m  read_SOMSMR_header.m  read_SOMSMR_sampleinterval.m  runcmd.m
matlab/+sonpipe/private/: invoke_binary.m  invoke_text.m
src/sonpipe/: __init__.py  __main__.py  channels.py  cli.py  debuglog.py  errors.py  sonfile.py
test/+sonpipe/+unittest/: DatafileTest.m  HeaderTest.m  SampleIntervalTest.m  TestCase.m  fakecli.py  run_all.m
tests/: conftest.py  fakesonpy.py  test_cli.py  test_debuglog.py  test_integration.py  test_sonfile.py
